# OpenCV-hackathon

./: ._deploy_hf.sh  .env.example  .gitignore  CHECKLIST.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_HF.md  SUBMISSION_GUIDE.md  TRANSFER_AND_SUBMIT.md  __init__.py  app.py  deploy_hf.sh  inference.py  manufacturing_qc_env.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  setup.sh  test_env.py  transfer_setup.sh
server/: app.py
